--- a/rapport.tex
+++ b/rapport.tex
@@ -498,7 +498,7 @@ L_h u_h (x_j) = f(x_j) \espace \forall j \in [[1,n-1]]
 \end{equation}
 avec les conditions limites
 \begin{equation}
-u_h(x_0) = d_0 \espace \wedge u_h(x_n) = d–1
+u_h(x_0) = d_0 \espace \wedge u_h(x_n) = d_1
 \end{equation}
 en définissant $L_h$ à partir de la fonction $\gamma$ précédente et des $w_k$ de \eqref{defWK} par:
 \begin{equation} \label{katto}
